fixed width string sort