@@ -14,7 +14,8 @@
 
     <properties>
         <kotlin.version>1.3.21</kotlin.version>
-        <jdk.version>1.8</jdk.version>
+        <!--        <jdk.version>1.8</jdk.version>-->
+        <jdk.version>12</jdk.version>
     </properties>
 
     <dependencies>
@@ -34,12 +35,6 @@
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
             <version>4.0.5</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.dropwizard.metrics</groupId>
-            <artifactId>metrics-core</artifactId>
-            <version>4.0.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -73,9 +68,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
                 <configuration>
-                  <source>${jdk.version}</source>
-                  <target>${jdk.version}</target>
+                    <release>${jdk.version}</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
                 </configuration>
                 <executions>
                     <execution>
